_Source/force-app/main/default/objects/User/fields/BI_Case_Queue_Member__c.field-meta.xml
<CustomField>
    <fullName>BI_Case_Queue_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Queue(s) Member</label>
    <type>Checkbox</type>
</CustomField>