_Source/force-app/main/default/objects/User/fields/BI_Cases_Queue_Membership__c.field-meta.xml
<CustomField>
    <fullName>BI_Cases_Queue_Membership__c</fullName>
    <label>Cases Queue Membership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMEX Queue</fullName>
            </value>
            <value>
                <fullName>Beverage Coupons Queue</fullName>
            </value>
            <value>
                <fullName>BI Release Queue</fullName>
            </value>
            <value>
                <fullName>BI Support Queue</fullName>
            </value>
            <value>
                <fullName>Corporate Direct (UCD) Queue</fullName>
            </value>
            <value>
                <fullName>Corporate Reports Queue</fullName>
            </value>
            <value>
                <fullName>CSST Queue</fullName>
            </value>
            <value>
                <fullName>Entertainment Queue</fullName>
            </value>
            <value>
                <fullName>Feedback Queue</fullName>
            </value>
            <value>
                <fullName>Government Queue</fullName>
            </value>
            <value>
                <fullName>Meetings Queue</fullName>
            </value>
            <value>
                <fullName>PassPlus Queue</fullName>
            </value>
            <value>
                <fullName>Policy &amp; Procedure Queue</fullName>
            </value>
            <value>
                <fullName>Portal Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>