_Source/force-app/main/default/objects/User/fields/BI_Objective_Division__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Division__c</fullName>
    <label>Sales Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>