_Source/force-app/main/default/objects/User/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>