_Source/force-app/main/default/objects/User/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>