_Source/force-app/main/default/objects/User/fields/User_Region__c.field-meta.xml
<CustomField>
    <fullName>User_Region__c</fullName>
    <formula>IF(  ISBLANK(Location__c), &quot;Other&quot;, 

IF( CONTAINS(&quot;HKGSS:TYOSS:SINSS:SELSS:TPESS:BKKSS:HKGSZ:TYOSO:SINSZ:TYOVW:AKLSS:TYOSV:NGOSS:HKGVW:FUKSS:SYDSS:OSASO:RORCS:HIJSA:OSASS:GUMUZ:JKTSS:MNLGA:KULGA:GUMSS:KWACS:TYOSZ:MAJCS:SDJSS:PEKSS:GUMSZ:HKGSV:SELSZ:CANSS:SHASS:SDJSA:TPESZ:PEKSV:CTUSS:SHASV:HGHSS:MNLSS:SGNSS:TYORR:MNLRR&quot;, Location__c), &quot;APAC&quot;,

IF(
CONTAINS(&quot;DELGA:DELSS:DELIS:LHRSS:KWIGA:LONSS:FRASS:LONVU:MOWGA:DXBGA:BAHGA:CDGSS:DUBSS:PARSS:TLVSS:FRAVU:AMSSS:LONSN:BRUSS:LISSS:MXPSS:ARNSS:LONVG:FRASC:EDISS:ZRHSS:ROMSS:BHXSS:MANSS:BFSSS:FRASZ:LHRSC:LHRSN:AMSVU:GLASS:MADSS:BCNSS:BRUSZ:FCOSS:GVASS&quot;, Location__c), &quot;EMEAI&quot;,

IF(
CONTAINS(&quot;SDQTO:MEXTO:SLPTO:MTYUZ:SAORO:CUUTO:PTYUZ:SAOUZ:GUATO:SJUSS:BJXSS:GIGSS:LIMUZ:UIOTO:LIMTO:BZESS:SJOTO:GDLTO:GUASS:UIOUZ:POSSS:MGASS:MTYTO:GIGTO:AGUTO:EZETO:MGATO:PTYTO:BOGTO:BUEUZ:SJOUZ:SAOSS:SCLTO:BUESS:BUETO:BOGSS:SAPSS:MEXSS:RIOSS:CCSSS:TGUTO:MEXVG:TAMTO:SAPTO:BZETO:SALTO:SDQSS:GRURO:SALSS:MEXUZ:CCSTO:EZEUZ:TGUUZ:SCLSS:SCLUZ:GRUUZ:VERTO:QROTO:MIDTO:EZE00:QROSS:GIGUZ:VERSS:BJXTO:BOGUZ&quot;, Location__c), &quot;Latin America&quot;, &quot;North America&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Organization</label>
    <type>Text</type>
</CustomField>